--- a/frontend/source/less/modules/video.less
+++ b/frontend/source/less/modules/video.less
@@ -5,6 +5,10 @@
             background-color: black;
             max-width: 100%;
             padding: 0;
+
+            .row {
+                margin: 0;
+            }
         }
     }
 
