--- a/frontend/source/less/modules/video.less
+++ b/frontend/source/less/modules/video.less
@@ -22,22 +22,19 @@
         justify-content: center;
 
         video {
-            width: 100%;
-            // background-size: cover;
-            // background-position: center;
-            // background-repeat: none;
-
-            // width: 64rem;
-            // height: 36rem;
-
-            // @media @screen-md-max {
-            //     width: 32rem;
-            //     height: 18rem;
-            // }
+            max-width: 100%;
+            height: auto;
+            background-size: cover;
+            background-position: center;
         }
 
         .oiplayer {
             margin: 0 auto;
+            max-width: 100%;
+            height: auto;
+            background-size: cover;
+            background-position: center;
+            background-repeat: none;
         }
         .oipcontrols {
             background-color: rgba(0, 0, 0, .65);
