display video correctly by “forcing” widths

--- a/frontend/source/less/modules/content-related.less
+++ b/frontend/source/less/modules/content-related.less
@@ -82,6 +82,14 @@
                 width: 100%;
                 margin-bottom: 1rem;
             }
+
+            span { 
+                display: inline-block; 
+                width: 20rem;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
         }
     }
 
