--- a/frontend/source/less/modules/content.less
+++ b/frontend/source/less/modules/content.less
@@ -4,6 +4,7 @@
         .content-type { margin-top: 2.6rem; }
         img {
             width: 100%;
+            height: auto;
         }
 
         .content-intro {
