--- a/frontend/source/pug/article.pug
+++ b/frontend/source/pug/article.pug
@@ -98,7 +98,7 @@ append main
                         li 
                             a.content-related__image(href="video.html")
                                 .content-related__image-bg( style="background-image: url(styles/images/Share_the_Security.jpg)" )
-                                span Video description
+                                span Video description, excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
 
             
             #images.content-related.row
@@ -115,7 +115,7 @@ append main
                         li 
                             a.content-related__image(href="#")
                                 .content-related__image-bg( style="background-image:url(styles/images/lol-cat.png)" )
-                                span Image description
+                                span Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                         li 
                             a.content-related__image(href="#")
                                 .content-related__image-bg( style="background-image:url(styles/images/lol-cat.png)" )
