--- a/src/main/webapp/collection.jspx
+++ b/src/main/webapp/collection.jspx
@@ -10,15 +10,8 @@
   
   <mm:node referid="page">
     <mm:nodeinfo type="type" id="nodetype" write="false" />
-    <!-- @TODO: redirect to 404 when not of type person -->
-    <c:choose>
-      <c:when test="${nodetype eq 'person'}">
-        <mm:import id="page_title"><mm:field name="firstname" /> <mm:field name="sirname" /></mm:import>
-      </c:when>
-      <c:otherwise>
-        <mm:field name="title" id="page_title" write="false" />
-      </c:otherwise>
-    </c:choose>
+    <!-- @TODO: redirect to 404 when not of type collection -->
+    <mm:field name="title" id="page_title" write="false" />
   </mm:node>
 
   <mm:escaper type="substring" id="wrap_intro">
@@ -29,7 +22,7 @@
            
   <tmf:html
       cacheable="${cacheable}"
-      styleClass="content person">
+      styleClass="collection">
     
     <jsp:attribute name="title"><mm:write referid="page_title" escape="inline" /></jsp:attribute>
     
@@ -56,48 +49,21 @@
     <jsp:attribute name="body">
       <mm:node referid="page">
       
-        <article class="container">
+        <section class="heading __collection" style="background-image:url('styles/images/raster-lightgrey.png')">
           <div class="row">
             <div class="col-md-2"><!-- empty --></div>
             <div class="col-md-8">
-              <header>
-                <div class="content-type">Person</div>
-                <h1 class="content-title">${page_title}</h1>
-                
-                <div class="content-info __person">
-                  <div class="content-info__image">
-                    <mm:relatednodescontainer type="picture" role="posrel" searchdirs="destination">
-                      <mm:maxnumber value="1" />
-                      <mm:relatednodes>
-                        <div class="content-info__image">
-                          <mm:image mode="img" width="240" height="240" crop="middle" />
-                        </div>
-                      </mm:relatednodes>
-                    </mm:relatednodescontainer>
-                  </div>
-                  <div class="content-info__related">
-                    <tmf:content-info-related />
-                  </div>
-                </div>
-                <mm:field name="intro" escape="paragraph(content-intro)" />
-                <mm:field name="biografy" escape="paragraph" />
-              </header>
+              <h1 class="collection-content-type">Collection</h1>
+              <h2 class="collection-author">Kurt Geiger</h2>
+              <div class="collection-heading">
+                <h3 class="collection-title">The right to be offended</h3>
+                <p class="collection-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
             </div>
+            <div class="col-md-2"><!-- empty --></div>
           </div>
-          
-          <section class="row">
-            <div class="col-md-2"><!-- empty --></div>
-            <div class="col-md-8">
-                <mm:field name="biografy" escape="paragraph" />
-            </div>
-            <div class="col-md-2"><!-- empty --></div>
-          </section>
-          
-          <aside>
-            <tmf:content-related />
-          </aside>
-          
-        </article>
+        </section>
+        
                 
       </mm:node>
     </jsp:attribute>
