--- a/frontend/source/less/components/heading.less
+++ b/frontend/source/less/components/heading.less
@@ -58,6 +58,7 @@
         letter-spacing: .1rem;
         color: @color-primary;
         text-align: center;
+        font-style: italic;
     }
 
     h3.collection-title {
