--- a/frontend/source/less/components/pager.less
+++ b/frontend/source/less/components/pager.less
@@ -16,6 +16,7 @@
             line-height: 3.2rem;
             width: 2.8rem;
             height: 2.8rem;
+            margin-bottom: 1rem;
             background-color: @color-grey;
             color: @color-grey--80;
             transition: background-color @trans-normal-material, color @trans-normal-material;
