collection tiles and background image

--- a/frontend/source/less/core/variables.less
+++ b/frontend/source/less/core/variables.less
@@ -8,6 +8,7 @@
 // Black & white
 @color-black-transparent:           fade(#444, 96%);
 @color-white-transparent:           fade(white, 60%);
+@color-grey-transparent:            fade(#808080, 66%);
 @color-primary-transparent:         fade(@color-primary, 50%);
 @color-grey:                        #EFEFEF;
 
@@ -80,7 +81,8 @@
 // Box shadows
 // -------------------------------
 
-@box-shadow:                        0 0.2rem 0.5rem 0 rgba(0, 0, 0, 0.25);
+@shadow:                            0 .2rem .5rem 0 fade(black, 10%);
+@shadow-hover:                      0 .2rem 1.5rem 0 fade(black, 20%);
 
 
 // Text shadows
