--- a/frontend/source/less/components/heading.less
+++ b/frontend/source/less/components/heading.less
@@ -2,13 +2,25 @@
     
     &.__collection {
         height: 57.4rem;
-        padding: 4rem;
+        overflow: hidden;
 
         @media @screen-md-max {
             height: 40rem;
         }
         @media @screen-sm-max {
             height: 36rem;
+        }
+
+        background-size: cover;
+        .container {
+            background-color: @color-grey-transparent;
+            padding: 4rem;
+            height: 100%;
+            
+            @media @screen-sm-max {
+                padding: 2rem;
+            }
+
         }
     }
 
@@ -23,11 +35,11 @@
         justify-content: space-around;
 
         height: 42rem;
-        margin: 3rem 0 0 0;
+        margin: 2rem 0 0 0;
 
         @media @screen-md-max {
             height: 26rem;
-            margin: 2rem 0 0 0;
+            margin: 1rem 0 0 0;
         }
         @media @screen-sm-max {
             height: 24rem;
@@ -79,7 +91,7 @@
         margin: 0;
 
         display: -webkit-box;
-        -webkit-line-clamp: 12;
+        -webkit-line-clamp: 8;
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -89,8 +101,10 @@
             .font(base);
         }
         @media @screen-sm-max {
-            -webkit-line-clamp: 7;
             .font(medium);
+        }
+        @media @screen-xs-max {
+            .font(small);
         }
 
     }
