--- a/frontend/source/pug/collection.pug
+++ b/frontend/source/pug/collection.pug
@@ -7,19 +7,20 @@ prepend variables
     - selected = 'all';
 
 append main
-    section.heading.__collection( style="background-image: url('styles/images/raster-lightgrey.png');" )
-        .row
-            .col-md-2
-            .col-md-8
-    
-                h1.collection-content-type Collection
-                h2.collection-author Kurt Geiger
+    section.heading.__collection( style="background-image: url('styles/images/Nuit_Debout_16.jpg');" )
+        .container(  )
+            .row
+                .col-md-2
+                .col-md-8
+        
+                    h1.collection-content-type Collection
+                    h2.collection-author Kurt Geiger
+                    
+                    .collection-heading
+                        h3.collection-title The right to be offended
+                        p.collection-intro Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 
-                .collection-heading
-                    h3.collection-title The right to be offended
-                    p.collection-intro Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            
-            .col-md-2
+                .col-md-2
 
     section.container
         .row
